[package]
name = "edtf"
version = "0.1.0"
authors = ["Cormac Relf <web@cormacrelf.net>"]
edition = "2018"
description = "EDTF parser"
license = "MPL-2.0"
repository = "https://github.com/cormacrelf/edtf-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = [ ]

[dependencies.num-integer]
version = "0.1.36"
default-features = false

[dependencies.nom]
version = "6"
default-features = false

[dependencies.chrono]
version = "0.4"
default-features = false
optional = true

[dev-dependencies]
no-panic = "0.1.15"
version-sync = "0.9"


